test/files/neg/specification-scopes/P_1.scala
package P {
  object X { val x = 1; val y = 2; }
}
package Q {
  object X { val x = true; val y = "" }
}
